# ecosnap

./: .eslintrc.js  .gitignore  README.md  heroku-build.sh  package.json  tsconfig.json  turbo.json
apps/backend/api/: .env.example  .eslintrc.js  .prettierrc.js  Dockerfile  Procfile  package.json
apps/backend/api/src/: app.module.ts  main.ts
apps/backend/merkle-submitter/: .env.example  Dockerfile  Procfile  package.json  tsconfig.json
apps/backend/merkle-submitter/src/: app.module.ts  main.ts
apps/contracts/solana/: Anchor.toml  package.json  tsconfig.json
apps/contracts/solana/migrations/: deploy.ts
apps/contracts/solana/programs/gc/: Cargo.toml
apps/contracts/solana/programs/gc/src/: errors.rs  lib.rs
apps/contracts/solana/programs/gc/src/instructions/: initialize_global_state.rs  mod.rs  new_proof.rs  new_root.rs
apps/contracts/solana/programs/gc/src/state/: global_state.rs  mod.rs  proof_state.rs  root_state.rs
apps/contracts/solana/programs/nft/: Cargo.toml
apps/contracts/solana/programs/nft/src/: constants.rs  errors.rs  lib.rs  utils.rs
apps/contracts/solana/programs/nft/src/instructions/: check_mint_extensions_constraint.rs  create_mint_account.rs  initialize_global_state.rs  mod.rs
apps/contracts/solana/programs/nft/src/state/: global_state.rs  mod.rs
apps/contracts/solana/programs/proofs/: Cargo.toml
apps/contracts/solana/programs/proofs/src/: constants.rs  errors.rs  lib.rs
apps/contracts/solana/programs/proofs/src/instructions/: initialize_proof.rs  mod.rs
apps/contracts/solana/programs/proofs/src/state/: mod.rs
apps/contracts/solana/scripts/: init.ts
apps/frontend/mobile/: app.json  package.json
apps/frontend/vite/: .eslintrc.cjs  components.json  package.json
apps/frontend/web/: .eslintrc.cjs  .eslintrc.json  .prettierrc.cjs  .prettierrc.json  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+188 files in other folders)
