[package]
name = "gc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gc"

[features]
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = ["mainnet"]
mainnet = []
devnet = []

[dependencies]
anchor-lang = "0.30.0"
