[package]
name = "proofs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proofs"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = ["mainnet"]
mainnet = []
devnet = []

[dependencies]
anchor-lang = "0.28.0"
